--- a/KitchenStory/Back-End/kitchenstory/pom.xml
+++ b/KitchenStory/Back-End/kitchenstory/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.decimal4j</groupId>
+		    <artifactId>decimal4j</artifactId>
+		    <version>1.0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
